fix nginx conf and docker-compose

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,11 @@
+upstream nextjs_upstream {
+    server nextjs:3000
+}
+
 server {
-    listen 80;
+    listen 80 default_server;
 
     location / {
-        proxy_pass http://nextjs:3000/;
+        proxy_pass http://nextjs_upstream/;
     }
 }
