--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,7 @@
-upstream nextjs_upstream {
-    server nextjs:3000
-}
-
-server {
+erver {
     listen 80 default_server;
 
     location / {
-        proxy_pass http://nextjs_upstream/;
+        proxy_pass http://nextjs:3000/;
     }
 }
